--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "heroku-postbuild": "npm run client-install && npm run client-build"
 
   },
+  "engines": {
+  "node": "20.x"
+},
+
+
+  
+
   "keywords": [],
   "author": "Archana",
   "license": "ISC",
