--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
-    "serve": "^14.2.3"
+    "serve": "^14.2.3",
+    "vite": "^5.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -34,8 +35,8 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "globals": "^15.9.0"
+    
     
   }
 }
